close to actually doing git-commits

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mocha": "^7.1.0",
     "neptune-namespaces": "^4.0.0",
     "pivotaljs": "^1.0.3",
+    "simple-git": "^1.131.0",
     "stable": "^0.1.8",
     "yargs": "^15.1.0"
   },
