--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "inquirer-autocomplete-prompt": "^1.0.2",
     "mocha": "^7.1.0",
     "neptune-namespaces": "^4.0.0",
+    "open": "^7.0.2",
     "pivotaljs": "^1.0.3",
     "simple-git": "^1.131.0",
     "stable": "^0.1.8",
