--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "inquirer": "^7.0.4",
     "inquirer-autocomplete-prompt": "^1.0.2",
     "mocha": "^7.1.0",
+    "mock-fs": "^4.11.0",
     "neptune-namespaces": "^4.0.0",
     "open": "^7.0.2",
     "pivotaljs": "^1.0.3",
