--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fs-extra": "^8.1.0",
     "inquirer": "^7.0.4",
     "inquirer-autocomplete-prompt": "^1.0.2",
+    "inquirer-checkbox-plus-prompt": "^1.0.1",
     "mocha": "^7.1.0",
     "mock-fs": "^4.11.0",
     "neptune-namespaces": "^4.0.0",
