--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "btoa": "^1.2.1",
     "caffeine-script": "^0.72.1",
     "chai": "^4.2.0",
-    "fs-extra": "^8.1.0",
-    "inquirer": "^7.0.4",
+    "fs-extra": "^9.0.0",
+    "inquirer": "^7.1.0",
     "inquirer-autocomplete-prompt": "^1.0.2",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
-    "mocha": "^7.1.0",
+    "mocha": "^7.1.1",
     "mock-fs": "^4.11.0",
     "neptune-namespaces": "^4.0.0",
-    "open": "^7.0.2",
+    "open": "^7.0.3",
     "pivotaljs": "^1.0.3",
-    "simple-git": "^1.131.0",
+    "simple-git": "^1.132.0",
     "stable": "^0.1.8",
     "terminal-link": "^2.1.1",
-    "yargs": "^15.1.0"
+    "yargs": "^15.3.1"
   },
+  "version": "0.1.0",
   "devDependencies": {},
   "scripts": {
     "test": "nn -s;mocha -u tdd"
