--- a/package.json
+++ b/package.json
@@ -1,29 +1,56 @@
 {
+  "author": "GenUI LLC",
+  "bin": {
+    "s3p": "./s3p"
+  },
+  "bugs": "https:/github.com/generalui/git-genui/issues",
   "dependencies": {
-    "approx-string-match": "^1.1.0",
-    "art-binary": "^1.1.3",
     "art-rest-client": "^1.7.0",
-    "art-testbench": "^1.17.2",
     "btoa": "^1.2.1",
-    "caffeine-script": "^0.72.1",
-    "chai": "^4.2.0",
     "fs-extra": "^9.0.0",
     "inquirer": "^7.1.0",
     "inquirer-autocomplete-prompt": "^1.0.2",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
-    "mocha": "^7.1.1",
-    "mock-fs": "^4.11.0",
     "neptune-namespaces": "^4.0.0",
     "open": "^7.0.3",
     "pivotaljs": "^1.0.3",
     "simple-git": "^1.132.0",
     "stable": "^0.1.8",
-    "terminal-link": "^2.1.1",
     "yargs": "^15.3.1"
   },
-  "version": "0.1.0",
-  "devDependencies": {},
+  "description": "git-genui streamlines: PivotalTracker updates, git-commits, pairing-git-commits, semantic-versioning",
+  "devDependencies": {
+    "art-build-configurator": "^1.26.9",
+    "art-testbench": "^1.17.2",
+    "caffeine-script": "^0.72.1",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "chai": "^4.2.0",
+    "coffee-loader": "^0.7.3",
+    "css-loader": "^3.0.0",
+    "json-loader": "^0.5.7",
+    "mocha": "^7.1.1",
+    "mock-fs": "^4.11.0",
+    "script-loader": "^0.7.2",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.39.1",
+    "webpack-cli": "*",
+    "webpack-dev-server": "^3.7.2",
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2",
+    "webpack-stylish": "^0.1.8"
+  },
+  "homepage": "https://github.com/generalui/git-genui",
+  "license": "ISC",
+  "name": "git-genui",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/generalui/git-genui.git"
+  },
   "scripts": {
-    "test": "nn -s;mocha -u tdd"
-  }
+    "build": "webpack --progress",
+    "start": "webpack-dev-server --hot --inline --progress --env.devServer",
+    "test": "nn -s;mocha -u tdd",
+    "testInBrowser": "webpack-dev-server --progress --env.devServer"
+  },
+  "version": "0.1.0"
 }
