--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "bugs": "https:/github.com/generalui/git-genui/issues",
   "dependencies": {
+    "@art-suite/cli": "^1.1.1",
     "art-rest-client": "^1.7.0",
     "btoa": "^1.2.1",
     "fs-extra": "^9.0.0",
