--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "open": "^7.0.3",
     "pivotaljs": "^1.0.3",
     "simple-git": "^1.132.0",
-    "stable": "^0.1.8",
-    "yargs": "^15.3.1"
+    "stable": "^0.1.8"
   },
   "description": "git-genui streamlines: PivotalTracker updates, git-commits, pairing-git-commits, semantic-versioning",
   "devDependencies": {
