patch/improvement: config command added

--- a/git-genui.config.json
+++ b/git-genui.config.json
@@ -2,7 +2,7 @@
   "project": {
     "tracker": {
       "name": "PivotalTracker",
-      "projectId": "2437171"
+      "projectId": 2437171
     }
   }
 }
