--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "url": "https://github.com/generalui/git-genui.git"
   },
   "scripts": {
-    "build": "webpack --progress",
+    "build": "caf -p -c source-caf -o source;nn -s",
     "start": "webpack-dev-server --hot --inline --progress --env.devServer",
     "test": "nn -s;mocha -u tdd",
     "testInBrowser": "webpack-dev-server --progress --env.devServer"
