--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "inquirer": "^7.1.0",
     "inquirer-autocomplete-prompt": "^1.0.2",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
-    "neptune-namespaces": "^4.0.0",
+    "neptune-namespaces": "^4.1.1",
+    "neptune-namespaces-runtime": "^3.0.0",
     "open": "^7.0.3",
     "pivotaljs": "^1.0.3",
     "simple-git": "^2.5.0",
@@ -27,9 +28,11 @@
     "chai": "^4.2.0",
     "coffee-loader": "^0.7.3",
     "css-loader": "^3.0.0",
+    "jest": "^26.0.1",
     "json-loader": "^0.5.7",
     "mocha": "^7.1.1",
     "mock-fs": "^4.11.0",
+    "neptune-namespaces": "^4.0.0",
     "script-loader": "^0.7.2",
     "style-loader": "^1.0.0",
     "watch": "^1.0.2",
@@ -41,6 +44,9 @@
     "webpack-stylish": "^0.1.8"
   },
   "homepage": "https://github.com/generalui/git-genui",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "license": "ISC",
   "name": "git-genui",
   "repository": {
