--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "dependencies": {
     "@art-suite/cli": "^1.1.1",
     "art-rest-client": "^1.7.0",
+    "art-standard-lib": "^1.67.0",
     "btoa": "^1.2.1",
     "fs-extra": "^9.0.0",
     "inquirer": "^7.1.0",
     "inquirer-autocomplete-prompt": "^1.0.2",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
-    "neptune-namespaces": "^4.1.1",
-    "neptune-namespaces-runtime": "^3.0.0",
+    "neptune-namespaces-runtime": "^3.2.0",
     "open": "^7.0.3",
+    "caffeine-script-runtime": "1.13.3",
     "pivotaljs": "^1.0.3",
     "simple-git": "^2.5.0",
     "stable": "^0.1.8"
@@ -32,7 +33,7 @@
     "json-loader": "^0.5.7",
     "mocha": "^7.1.1",
     "mock-fs": "^4.11.0",
-    "neptune-namespaces": "^4.0.0",
+    "neptune-namespaces": "^4.2.0",
     "script-loader": "^0.7.2",
     "style-loader": "^1.0.0",
     "watch": "^1.0.2",
