patch/deps: updated

--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "btoa": "^1.2.1",
     "caffeine-script-runtime": "1.13.3",
     "fs-extra": "^9.0.0",
-    "inquirer": "^7.1.0",
+    "inquirer": "^7.2.0",
     "inquirer-autocomplete-prompt": "^1.0.2",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "neptune-namespaces-runtime": "^3.0.0",
     "open": "^7.0.3",
     "pivotaljs": "^1.0.3",
-    "simple-git": "^2.5.0",
+    "simple-git": "^2.8.0",
     "stable": "^0.1.8"
   },
   "description": "git-genui streamlines: PivotalTracker updates, git-commits, pairing-git-commits, semantic-versioning",
@@ -28,7 +28,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chai": "^4.2.0",
     "coffee-loader": "^0.7.3",
-    "css-loader": "^3.0.0",
+    "css-loader": "^3.6.0",
     "jest": "^26.0.1",
     "json-loader": "^0.5.7",
     "mocha": "^7.1.1",
@@ -38,7 +38,7 @@
     "style-loader": "^1.0.0",
     "watch": "^1.0.2",
     "webpack": "^4.39.1",
-    "webpack-cli": "*",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2",
