--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "author": "GenUI LLC",
   "bin": {
+    "gg": "./git-genui",
     "git-genui": "./git-genui"
   },
   "bugs": "https:/github.com/generalui/git-genui/issues",
@@ -11,16 +12,16 @@
     "btoa": "^1.2.1",
     "caffeine-script-runtime": "1.13.3",
     "fs-extra": "^9.0.0",
-    "inquirer": "^7.2.0",
+    "inquirer": "^7.1.0",
     "inquirer-autocomplete-prompt": "^1.0.2",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
     "neptune-namespaces-runtime": "^3.0.0",
     "open": "^7.0.3",
     "pivotaljs": "^1.0.3",
-    "simple-git": "^2.8.0",
+    "simple-git": "^2.5.0",
     "stable": "^0.1.8"
   },
-  "description": "streamlined 'git commits' (issue tagging, pair attribution, semantic-versioning) and command-line tracker updates (start, finish and update stories)",
+  "description": "git-genui streamlines: PivotalTracker updates, git-commits, pairing-git-commits, semantic-versioning",
   "devDependencies": {
     "art-build-configurator": "^1.26.9",
     "art-testbench": "^1.17.2",
@@ -28,7 +29,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chai": "^4.2.0",
     "coffee-loader": "^0.7.3",
-    "css-loader": "^3.6.0",
+    "css-loader": "^3.0.0",
     "jest": "^26.0.1",
     "json-loader": "^0.5.7",
     "mocha": "^7.1.1",
@@ -38,12 +39,19 @@
     "style-loader": "^1.0.0",
     "watch": "^1.0.2",
     "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "*",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2",
     "webpack-stylish": "^0.1.8"
   },
+  "files": [
+    "**/*.json",
+    "**/*.caf",
+    "**/*.js",
+    "**/*.md",
+    "git-genui"
+  ],
   "homepage": "https://github.com/generalui/git-genui",
   "jest": {
     "testEnvironment": "node"
