patch/refactor: still trying to get .gitattributes to do ANYTHING at all...

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,1 @@
-source-caf/** linguist-vendored
-coverage/** -linguist-vendored
-source/** -linguist-vendored
-*.caf linguist-language=CaffeineScript
+* linguist-language=JavaScript
