minor/feature: [#173553488] added option to select commit format: standard or conventionalCommit

--- a/git-genui.config.json
+++ b/git-genui.config.json
@@ -1,8 +1,9 @@
 {
-  "project": {
-    "tracker": {
-      "name": "PivotalTracker",
-      "projectId": 2437171
-    }
+  "commit": {
+    "format": "standard"
+  },
+  "tracker": {
+    "name": "PivotalTracker",
+    "projectId": 2437171
   }
 }
