--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "art-standard-lib": "^1.68.0",
     "btoa": "^1.2.1",
     "caffeine-script-runtime": "1.13.3",
+    "external-editor": "^3.1.0",
     "fs-extra": "^9.0.0",
     "inquirer": "^7.1.0",
     "inquirer-autocomplete-prompt": "^1.0.2",
@@ -25,7 +26,7 @@
   "description": "git-genui streamlines: PivotalTracker updates, git-commits, pairing-git-commits, semantic-versioning",
   "devDependencies": {
     "art-build-configurator": "^1.26.9",
-    "art-testbench": "^1.17.2",
+    "art-testbench": "^1.18.0",
     "caffeine-script": "^0.72.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chai": "^4.2.0",
