patch/fix: [#173713697] now prompting for config on first run

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "bugs": "https:/github.com/generalui/git-genui/issues",
   "dependencies": {
     "@art-suite/cli": "^1.1.5",
+    "ansi-wordwrap": "^1.0.2",
     "art-rest-client": "^1.8.5",
     "art-standard-lib": "^1.69.4",
     "btoa": "^1.2.1",
@@ -14,39 +15,24 @@
     "chalk": "^4.1.0",
     "external-editor": "^3.1.0",
     "fs-extra": "^9.0.0",
-    "inquirer": "^7.1.0",
+    "inquirer": "^7.3.0",
     "neptune-namespaces-runtime": "^3.2.3",
     "open": "^7.0.3",
     "pivotaljs": "^1.0.3",
-    "simple-git": "^2.11.0",
+    "simple-git": "^2.12.0",
     "slice-ansi": "^4.0.0",
     "stable": "^0.1.8"
   },
   "description": "git-genui streamlines: PivotalTracker updates, git-commits, pairing-git-commits, semantic-versioning",
   "devDependencies": {
-    "art-build-configurator": "^1.26.14",
-    "art-testbench": "^1.18.8",
-    "npm-watch": "^0.6.0",
-    "caffeine-script": "^0.72.1",
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "chai": "^4.2.0",
-    "coffee-loader": "^0.7.3",
     "@art-suite/mock-fs": "^1.0.0",
-    "css-loader": "^3.0.0",
+    "art-build-configurator": "^1.26.14",
+    "art-testbench": "^2.0.0",
+    "caffeine-script": "^0.72.1",
     "jest": "^26.1.0",
-    "json-loader": "^0.5.7",
-    "mocha": "^7.1.1",
     "mock-fs": "^4.11.0",
     "neptune-namespaces": "^4.2.3",
-    "script-loader": "^0.7.2",
-    "style-loader": "^1.0.0",
-    "watch": "^1.0.2",
-    "webpack": "^4.39.1",
-    "webpack-cli": "*",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-stylish": "^0.1.8"
+    "npm-watch": "^0.6.0"
   },
   "homepage": "https://github.com/generalui/git-genui",
   "jest": {
@@ -71,7 +57,7 @@
     "build": "caf -p -c source-caf -o source; nn -sq",
     "build-clean": "rm -rf source/*; npm run build",
     "build-test": "npm run build; npm run test --silent; echo",
-    "test": "nn -s;mocha -u tdd;jest",
+    "test": "nn -s; jest",
     "watch": "npm-watch",
     "watch-test": "watch 'npm run build-test' ./source-caf ./test"
   },
