patch/fix: [#175314971] fixed bugs-can't-be-estimated bug

--- a/package.json
+++ b/package.json
@@ -6,34 +6,34 @@
   },
   "bugs": "https:/github.com/generalui/git-genui/issues",
   "dependencies": {
-    "@art-suite/cli": "^1.3.3",
+    "@art-suite/cli": "^1.3.7",
     "ansi-wordwrap": "^1.0.2",
-    "art-rest-client": "^1.8.5",
-    "art-standard-lib": "^1.69.4",
+    "art-rest-client": "^1.8.8",
+    "art-standard-lib": "^1.69.8",
     "btoa": "^1.2.1",
-    "caffeine-eight": "^2.6.0",
-    "caffeine-script-runtime": "1.13.3",
+    "caffeine-eight": "^2.6.1",
+    "caffeine-script-runtime": "^1.13.4",
     "chalk": "^4.1.0",
     "external-editor": "^3.1.0",
     "fs-extra": "^9.0.0",
-    "inquirer": "^7.3.2",
-    "neptune-namespaces-runtime": "^3.2.3",
-    "open": "^7.0.3",
+    "inquirer": "^7.3.3",
+    "neptune-namespaces-runtime": "^3.2.6",
+    "open": "^7.2.0",
     "pivotaljs": "^1.0.3",
-    "simple-git": "^2.12.0",
+    "simple-git": "^2.20.1",
     "slice-ansi": "^4.0.0",
     "stable": "^0.1.8"
   },
   "description": "git-genui streamlines: PivotalTracker updates, git-commits, pairing-git-commits, semantic-versioning",
   "devDependencies": {
-    "@art-suite/mock-fs": "^1.0.0",
-    "art-build-configurator": "^1.26.14",
-    "art-testbench": "^2.1.0",
-    "caffeine-script": "^0.72.1",
-    "jest": "^26.1.0",
-    "mock-fs": "^4.11.0",
-    "neptune-namespaces": "^4.2.3",
-    "npm-watch": "^0.6.0"
+    "@art-suite/mock-fs": "^1.0.3",
+    "art-build-configurator": "^1.26.17",
+    "art-testbench": "^2.2.5",
+    "caffeine-script": "^0.72.4",
+    "jest": "^26.4.2",
+    "mock-fs": "^4.13.0",
+    "neptune-namespaces": "^4.2.6",
+    "npm-watch": "^0.7.0"
   },
   "homepage": "https://github.com/generalui/git-genui",
   "jest": {
