--- a/package.json
+++ b/package.json
@@ -31,25 +31,12 @@
     "@art-suite/mock-fs": "^1.0.3",
     "@art-suite/standard-package-builder": "^1.1.3",
     "art-build-configurator": "^1.26.9",
-    "art-testbench": "^1.17.2",
+    "art-testbench": "^3.2.7",
     "caffeine-script": "^0.74.1",
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "chai": "^4.2.0",
-    "coffee-loader": "^0.7.3",
-    "css-loader": "^3.0.0",
     "jest": "^28.1.0",
-    "json-loader": "^0.5.7",
-    "mocha": "^7.1.1",
     "mock-fs": "^4.11.0",
     "neptune-namespaces": "^4.0.0",
-    "npm-watch": "^0.7.0",
-    "script-loader": "^0.7.2",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.39.1",
-    "webpack-cli": "*",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1",
-    "webpack-node-externals": "^1.7.2"
+    "npm-watch": "^0.7.0"
   },
   "homepage": "https://github.com/generalui/git-genui",
   "jest": {
