--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chalk": "^4.1.0",
     "external-editor": "^3.1.0",
     "fs-extra": "^10.1.0",
+    "glob-promise": "^5.0.0",
     "inquirer": "^8.2.4",
     "inquirer-autocomplete-prompt": "^2.0.0",
     "inquirer-checkbox-plus-prompt": "^1.0.1",
@@ -32,7 +33,7 @@
     "art-build-configurator": "^1.26.9",
     "art-testbench": "^3.2.7",
     "caffeine-script": "^0.74.1",
-    "jest": "^28.1.0",
+    "jest": "^29.2.0",
     "mock-fs": "^5.1.2",
     "neptune-namespaces": "^4.0.0",
     "npm-watch": "^0.11.0"
