--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chalk": "^4.1.0",
     "external-editor": "^3.1.0",
     "fs-extra": "^10.1.0",
+    "glob": "^8.0.3",
     "glob-promise": "^5.0.0",
     "inquirer": "^8.2.4",
     "inquirer-autocomplete-prompt": "^2.0.0",
