--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "art-testbench": "^3.2.7",
     "caffeine-script": "^0.74.1",
     "jest": "^29.2.0",
+    "nodemon": "^3.1.0",
     "mock-fs": "^5.1.2",
-    "neptune-namespaces": "^4.0.0",
-    "npm-watch": "^0.11.0"
+    "neptune-namespaces": "^4.0.0"
   },
   "homepage": "https://github.com/generalui/git-genui",
   "jest": {
